# drf-serpy

./: 404.html  README.md  index.html  pyproject.toml  requirements.txt  search.html  setup.py
api_reference/drf_fields/: index.html
api_reference/drf_serializers/: index.html
custom-fields/: index.html
drf_serpy/: fields.py  serializer.py
example_django_app/: db.sqlite3
imgs/: theme-overrides.css
performance/: index.html
search/: search_index.json
serpy/: __init__.py  fields.py  serializer.py
src/drf_serpy/: __init__.py  fields.py  serializer.py
swagger_gen/: index.html
test_django_app/todo/: views.py
test_django_app/todo/serializers/: serps.py
